--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "premier-frontend",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "15.14.0",
-    "npm": "7.7.6"
-  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -29,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
